# pixeldition

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
pixeldition/: __main__.py  cli.py  main.py
pixeldition/core/: base.py  loader.py  pipeline.py  registry.py
pixeldition/transformers/: channel_invert.py  channel_swap.py  posterize.py
